@@ -1,5 +1,10 @@
 2002-08-29 Baptiste Lepilleur <gaiacrtn@free.fr>
 
+  * include/cppunit/TestResult.h:
+  * src/cppunit/TestResult.cpp: fixed shouldStop() bug.
+
+2002-08-29 Baptiste Lepilleur <gaiacrtn@free.fr>
+
   * include/cppunit/CompilerOutputter.h:
   * include/cppunit/Exception.h:
   * include/cppunit/Protector.h:
